<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:gravity="center"
    android:background="@drawable/log"

    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <ScrollView
        android:layout_width="350dp"
        android:layout_height="600dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:background="@color/white">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center"
            >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/app_name"
                android:textAlignment="center"
                android:textColor="#FF5722"
                android:textSize="50sp"
                android:layout_margin="10dp"
                android:textStyle="bold" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:layout_marginBottom="20dp"
                android:text="@string/don_t_starve_just_order"
                android:textAlignment="center"
                android:textColor="#FF5722"
                android:textSize="30sp"
                android:textStyle="bold" />
            <EditText
                android:inputType="text"
                android:id="@+id/firstName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="15"
                android:textColor="@color/black"
                android:textStyle="bold"
                android:layout_margin="10dp"
                android:padding="10dp"
                android:textSize="25sp"
                android:hint="@string/first_name"


                />
            <EditText
                android:inputType="text"
                android:id="@+id/lastName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="15"
                android:layout_margin="10dp"
                android:padding="10dp"
                android:textColor="@color/black"
                android:textStyle="bold"
                android:textSize="25sp"
                android:hint="@string/last_name"/>


            <EditText
                android:id="@+id/CustomerEmail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:drawableStart="@drawable/baseline_email_24"
                android:ems="15"
                android:hint="@string/Email"
                android:inputType="textEmailAddress"
                android:padding="10dp"
                android:textColor="@color/black"
                android:textSize="25sp"

                android:textStyle="bold"


                />

            <EditText
                android:inputType="textPassword"
                android:id="@+id/CustomerPassword"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="15"
                android:layout_margin="10dp"
                android:padding="10dp"
                android:textColor="@color/black"
                android:textStyle="bold"
                android:textSize="25sp"
                android:hint="@string/Password"
                android:drawableEnd="@drawable/baseline_remove_red_eye_24"
                />

            <EditText
                android:id="@+id/CustomerPasswordConfirmation"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:drawableEnd="@drawable/baseline_remove_red_eye_24"
                android:ems="15"
                android:hint="@string/confirm_password"
                android:inputType="textPassword"
                android:padding="10dp"
                android:textColor="@color/black"
                android:textSize="25sp"
                android:textStyle="bold"


                />

            <EditText
                android:inputType="number"
                android:id="@+id/CustomerPhone"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="15"
                android:layout_margin="10dp"
                android:padding="10dp"
                android:textColor="@color/black"
                android:textStyle="bold"
                android:textSize="25sp"
                android:hint="@string/phone"
                tools:ignore="TextFields" />
            <EditText
                android:inputType="text"
                android:id="@+id/customerAddress"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="15"
                android:layout_margin="10dp"
                android:padding="10dp"
                android:textColor="@color/black"
                android:textStyle="bold"
                android:textSize="25sp"
                android:hint="@string/house_street_no"
                tools:ignore="TextFields" />
            <EditText
                android:inputType="text"
                android:id="@+id/customerArea"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="15"
                android:layout_margin="10dp"
                android:padding="10dp"
                android:textColor="@color/black"
                android:textStyle="bold"
                android:textSize="25sp"
                android:hint="@string/area"
                tools:ignore="TextFields" />
            <EditText
                android:inputType="text"
                android:id="@+id/customerState"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="15"
                android:layout_margin="10dp"
                android:padding="10dp"
                android:textColor="@color/black"
                android:textStyle="bold"
                android:textSize="25sp"
                android:hint="@string/state"
                tools:ignore="TextFields" />
            <Button
                android:id="@+id/customerRegisterButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:background="@color/white"
                android:text="@string/Register"
                android:textSize="25sp"
                android:padding="10dp"
                android:textStyle="bold"
                android:layout_marginBottom="50dp"/>

        </LinearLayout>

    </ScrollView>


</androidx.constraintlayout.widget.ConstraintLayout>