<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:gravity="center"
    android:background="@drawable/log"

    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="wrap_content"
        android:padding="20dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center"
        android:background="@color/white"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/app_name"
            android:textAlignment="center"
            android:textColor="#FF5722"
            android:textSize="50sp"
            android:layout_margin="10dp"
            android:textStyle="bold" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_marginBottom="20dp"
            android:text="@string/don_t_starve_just_order"
            android:textAlignment="center"
            android:textColor="#FF5722"
            android:textSize="30sp"
            android:textStyle="bold" />
        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/connectAsChef"
            android:backgroundTint="@color/black"
            android:padding="25dp"
            android:layout_margin="15dp"
            android:text="@string/connect_as_chef"
            android:textColor="@color/white"
            android:textSize="25sp"
            android:textStyle="bold"
            android:layout_width="300dp"
            android:layout_height="wrap_content"/>
        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/connectAsCustomer"
            android:layout_width="300dp"
            android:layout_margin="15dp"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/black"
            android:padding="25dp"
            android:text="@string/connect_as_customer"
            android:textColor="@color/white"
            android:textSize="25sp"
            android:textStyle="bold"
            />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/connectAsDeliveryPerson"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/black"
            android:padding="25dp"
            android:layout_margin="15dp"
            android:text="@string/connect_as_delivery_person"
            android:textColor="@color/white"
            android:textSize="25sp"
            android:textStyle="bold"/>


    </LinearLayout>


</androidx.appcompat.widget.LinearLayoutCompat>